--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <title>Introduction to the DOM Lab</title>
   </head>
   <body>
-    <!--Copy the lesson's example code here-->
+      <div>
+        <ul class="ranked-list">
+          <li>1</li>
+          <ul>
+          <li>2</li>
+          </ul>
+          <li>3</li>
+        </ul>
+      </div>
+    
+      <div>
+        <ul class="unranked-list">
+          <li>6</li>
+          <li>2</li>
+          <li>
+            <div>4</div>
+          </li>
+        </ul>
+      </div>
   </body>
 </html>
